# tgbot-cpp

./: CMakeLists.txt  Dockerfile  README.md  sw.cpp
include/tgbot/: TgException.h  tgbot.h
include/tgbot/net/: BoostHttpOnlySslClientAlive.h  HttpParser.h  HttpReqArg.h  SocketSslData.h
include/tgbot/tools/: BoostTools.h  FileTools.h
include/tgbot/types/: InputFile.h  InputMedia.h  InputMediaPhoto.h
samples/: CMakeLists.txt
samples/echobot/: CMakeLists.txt
samples/echobot-curl-client/: CMakeLists.txt
samples/echobot-submodule/: CMakeLists.txt
samples/echobot-webhook-server/: CMakeLists.txt
samples/inline-keyboard/: CMakeLists.txt
samples/photo/: CMakeLists.txt
src/: Api.cpp  Bot.cpp  TgTypeParser.cpp
src/net/: BoostHttpOnlySslClientAlive.cpp  CurlHttpClient.cpp  HttpParser.cpp  SocketSslData.cpp
src/tools/: FileTools.cpp  StringTools.cpp
test/: main.cpp
